Calico-demos/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kurtis-ingress
spec:
  rules:
  - host: web1.kvad.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: hello1
          servicePort: 8080
