Calico-demos/ingress-to-pod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: backend
  name: connect-policy
spec:
  podSelector:
    matchLabels:
      app: hello-world-nodeport1
  ingress:
    - from:
        - podSelector:
            matchLabels:
              namespace: frontend
              app: hello-world-nodeport2
      ports:
        - protocol: TCP
          port: 8080
