Calico-demos/ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: hello-world-nodeport2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hello-world-nodeport1
    ports:
      - port: 8080
