Calico-demos/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world-nodeport
  ingress:
    - from:
      - podSelector:
          matchLabels: {}
