Calico-demos/pod-pod-check.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: connect-check-kurtis
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-world-nodeport1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          namespace: default
          app: hello-world-nodeport2
    ports:
    - protocol: TCP
      port: 8080
